feat: hyprland tweaks on  window focuse

--- a/hyprland-overrides.conf
+++ b/hyprland-overrides.conf
@@ -34,3 +34,21 @@ input {
   kb_variant = ,apostrophe
   kb_options = grp:alt_shift_toggle,lv3:ralt_switch
 }
+
+# ========================================
+# TWEAKS
+# ========================================
+
+decoration {
+  rounding = 8
+  active_opacity=2.0
+  inactive_opacity=0.7
+}
+
+general {
+  gaps_in = 2
+  gaps_out = 18
+  border_size = 0
+}
+
+
