feat: screenshot shortcuts

--- a/hyprland/hyprland-overrides.conf
+++ b/hyprland/hyprland-overrides.conf
@@ -52,3 +52,12 @@ general {
 }
 
 
+# ========================================
+# KEYBINDS
+# ========================================
+
+# macOS-style screenshots
+bindd = SUPER CTRL, 3, Screenshot fullscreen to clipboard, exec, omarchy-cmd-screenshot smart clipboard
+bindd = SUPER CTRL, 4, Screenshot area with editing, exec, omarchy-cmd-screenshot
+bindd = SUPER CTRL, 5, Screenshot fullscreen to file, exec, omarchy-cmd-screenshot smart
+
