--- a/hyprland/hyprland-overrides.conf
+++ b/hyprland/hyprland-overrides.conf
@@ -30,7 +30,7 @@ workspace = 5, monitor:HDMI-A-1
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = us,lv
+  kb_layout = us,lv,dk
   kb_variant = ,apostrophe
   kb_options = grp:alt_shift_toggle,lv3:ralt_switch
 }
@@ -41,8 +41,10 @@ input {
 
 decoration {
   rounding = 8
-  active_opacity=2.0
-  inactive_opacity=0.7
+  # active_opacity=2.0
+  active_opacity=1.0
+  inactive_opacity=0.9
+  # inactive_opacity=0.7
 }
 
 general {
